[project]
name = "md-pdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Mayo", email = "dcmayo@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
md-pdf = "md_pdf:main"

[build-system]
requires = ["uv_build>=0.9.24,<0.10.0"]
build-backend = "uv_build"
